--- a/sails-bin/templates/user/signup_instruction.html
+++ b/sails-bin/templates/user/signup_instruction.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
-{% block title %}Email Confirmation{% endblock title %}
+{% block title %}邮箱验证{% endblock title %}
 {% block content %}
 <main class="container">
     <div class="p-5 rounded shadow">
-      <h1>Verify your email address</h1>
-
-      We have sent your an email to confirm. Go and check your inbox and junk folder to verify your email.
+      <h1>请验证您的账号</h1>
+      <p class="lead">
+        我们已经向您的邮箱发送了确认邮件。
       <br>
-      If you have not received our email in both your inbox and junk folder, please contact administrators for help.
+        请去邮箱检查您的收件箱或垃圾文件夹以查看验证邮件。点击邮件中的网址即可完成验证。
+      <br>
+        如果您没有在您的收件箱或垃圾文件夹中收到我们的电子邮件，请联系我们寻求帮助。
+      </p>
     </div>
     <br>
 </main>
