--- a/sails-bin/templates/user/change_passwd.html
+++ b/sails-bin/templates/user/change_passwd.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Change your password{% endblock title %}
+{% block title %}修改密码{% endblock title %}
 {% block head %}
     {% call super() %}
     <!-- Custom styles for sign in page -->
@@ -9,13 +9,13 @@
 {% block body %}
 <main class="form-signin text-center">
   <form action="change_passwd" method="post">
-    <h1 class="h3 mb-3 fw-normal">New password</h1>
+    <h1 class="h3 mb-3 fw-normal">新密码</h1>
 
     <div class="form-floating">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
-      <label for="floatingPassword">Password</label>
+      <label for="floatingPassword">密码</label>
     </div>
-    <button class="w-100 btn btn-lg btn-warning" type="submit">Submit</button>
+    <button class="w-100 btn btn-lg btn-warning" type="submit">更改</button>
   </form>
 </main>
 {% endblock body %}
