--- a/sails-bin/templates/user/reset_passwd_confirmation.html
+++ b/sails-bin/templates/user/reset_passwd_confirmation.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Reset Password Confirmation{% endblock title %}
+{% block title %}密码重置确认{% endblock title %}
 {% block content %}
 <main class="container">
     <div class="p-5 rounded shadow">
-      <h1>Your password has been successfully reset</h1>
-
-      The new password is <code>{{reset_passwd}}</code>.<br>
-      Please sign in use the new password above and change it soon.
+      <h1>您的密码已经被重置了</h1>
+      <p class="lead">
+      新密码是 <code>{{reset_passwd}}</code>.
+      <br>
+      请您用上面的新密码登录账号，注意及时修改默认密码。
+    </p>
     </div>
     <br>
 </main>
