--- a/sails-bin/templates/market/delegate_book.html
+++ b/sails-bin/templates/market/delegate_book.html
@@ -8,7 +8,7 @@
 
     <form action="delegate_book" method="post">
       <div class="form-group row">
-	<label for="inputCategory" class="col-sm-2 col-form-label">Category</label>
+	<label for="inputCategory" class="col-sm-2 col-form-label">种类</label>
 	<div class="col-sm-4">
           <select class="form-select" aria-label="Default select example" name="category">
 	    {% for category in categories %}
