--- a/sails-bin/templates/market/post_book_interim.html
+++ b/sails-bin/templates/market/post_book_interim.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
-{% block title %}Choose your service{% endblock title %}
+{% block title %}选择书本上架方式{% endblock title %}
 {% block content %}
   <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>How would you like us to help you?</h1>
-    <p class="lead">We offer two different book uploading services.</p>
+    <h1>您想以何种方式上架书本？</h1>
+    <p class="lead">现在我们提供两种书本上架方式</p>
     <div class="row">
       <div class="col-sm-6">
 	<div class="card">
 	  <div class="card-header">
-	    自助上传
+	    自助上架
 	  </div>
 	  <div class="card-body">
-            <p class="card-text">自助上传可以让您完全个性化您的书本介绍和定价，充分展现书本背后的故事和价值</p>
+            <p class="card-text">自助上架可以让您完全个性化您的书本介绍和定价，充分展现书本背后的故事和价值</p>
 	    <ul class="list-group list-group-flush">
 	      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> 简约坚固的包装服务</li>
 	      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> 免费配送书本至买家</li>
@@ -30,7 +30,7 @@
 	    FLibrary Pro
 	  </div>
 	  <div class="card-body">
-            <p class="card-text">快速，省心，有效。FLibrary Pro 计划可以在保证书本竞争力的同时最大成度的结约您的时间</p>
+            <p class="card-text">快速，省心，有效。FLibrary Pro 计划可以在保证书本竞争力的同时最大成度的节约您的时间</p>
 	    <ul class="list-group list-group-flush">
 	      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> 高标准的书本清洁包装配送服务</li>
 	      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> 专门的文案和定价管理</li>
