--- a/sails-bin/templates/market/instruction.html
+++ b/sails-bin/templates/market/instruction.html
@@ -1,23 +1,25 @@
 {% extends "base.html" %}
-{% block title %}Instruction{% endblock title %}
+{% block title %}完成您的书本上架{% endblock title %}
 {% block content %}
 <main class="container">
     <div class="p-5 rounded shadow">
-      <h1>Here are the last things to do</h1>
+      <h1>最后一步</h1>
 
-      <h4>Step 1</h4>
-      Write down the following information on a sticky note and put it on the book:
+      <h4>如果您现在就打算把书本交给我们</h4>
+      请在一张便签纸上写下以下信息，然后和书本一并交给我们。
       <ol class="list-group list-group-numbered">
-	<li class="list-group-item">your book ID: <code>{{ info.get_shortid() }}</code></li>
-	<li class="list-group-item">your real name</li>
+	<li class="list-group-item">您书本的 ID: <code>{{ info.get_shortid() }}</code></li>
+	<li class="list-group-item">您的真实姓名</li>
       </ol>
       <br>
-      <h4>Step 2</h4>
-      Hand it to us in our warehouse on the third floor.
+      <h4>如果您需要在成交后再交付书本</h4>
+      您需要和我们签定合约并支付押金来完成书本上架。押金在交易成功结束后会退还给您，详见合约条款。
+      <br>
+      <a href="deposit_info?book_id={{info.get_id()}}" class="btn btn-success" role="button">支付押金</a>
       <br>
       <hr>
-      <h4>Finished?</h4>
-      <a href="book_info?book_id={{ info.get_id() }}" class="btn btn-primary" role="button">Go to the book page</a>
+      <h4>大功告成？</h4>
+      <a href="book_info?book_id={{ info.get_id() }}" class="btn btn-primary" role="button">前往书本页面</a>
     </div>
     <br>
 </main>
