i18n: market and order pages

--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -8,8 +8,8 @@
     <h1 class="display-4 fw-bold">FLibrary</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Where Knowledge Values</p>
-      <a href="/user" class="btn btn-primary" role="button">User Portal</a>
-      <a href="/market/post_book_interim" class="btn btn-warning" role="button">Post a book</a>
+      <a href="/user" class="btn btn-primary" role="button">用户主页</a>
+      <a href="/market/post_book_interim" class="btn btn-warning" role="button">上架书本</a>
     </div>
     </div>
 
