--- a/sails-bin/templates/market/explore.html
+++ b/sails-bin/templates/market/explore.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}书店{% endblock title %}
-{% block navbutton %}<li class="nav-item"><a href="/market/post_book_interim" class="btn btn-warning" role="button">Post a book</a></li>{% endblock navbutton %}
+{% block navbutton %}<li class="nav-item"><a href="/market/post_book_interim" class="btn btn-warning" role="button">上架书本</a></li>{% endblock navbutton %}
 
 {% block content %}
 <main class="container">
