--- a/sails-bin/templates/orders/order_info_seller_or_admin.html
+++ b/sails-bin/templates/orders/order_info_seller_or_admin.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="container">
     <div class="p-5 rounded shadow">
-      <h1>Details of order #{{ order.get_shortid() }}</h1>
+      <h1>订单 #{{ order.get_shortid() }} 的细节</h1>
       <br>
       {% match order.get_transaction_status() %}
       {% when sails_db::enums::TransactionStatus::Refunded %}
@@ -11,30 +11,32 @@
 	<div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
       </div>
       <br>
-      <h3>Order refunded (canceled)</h3>
-      There is nothing left to do.
+      <h3>订单已退款（已取消）</h3>
+      您不需要进行任何操作。
+      <a href="/orders/progress?order_id={{order.get_id()}}" class="btn btn-primary" role="button">更新订单信息</a>
 
       {% when sails_db::enums::TransactionStatus::Placed %}
       <div class="progress">
 	<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%"></div>
       </div>
       <br>
-      <h3>Order successfully placed</h3>
+      <h3>成功下单</h3>
+      <a href="/orders/progress?order_id={{order.get_id()}}" class="btn btn-primary" role="button">更新订单信息</a>
 
       {% when sails_db::enums::TransactionStatus::Paid %}
       <div class="progress">
 	<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="width: 66%"></div>
       </div>
       <br>
-      <h3>Order successfully paid</h3>
+      <h3>已成功付款</h3>
 
       {% when sails_db::enums::TransactionStatus::Finished %}
       <div class="progress">
 	<div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
       </div>
       <br>
-      <h3>Order has been successfully finished!</h2>
-      There is nothing left to do.
+      <h3>订单已成功交付</h2>
+      您不需要进行任何操作。
       {% endmatch %}
     </div>
 <br>
@@ -42,27 +44,27 @@
       <table class="table table-hover">
     <tbody>
     <tr>
-      <th scope="row">Price</th>
+      <th scope="row">价格</th>
       <td>CN¥ {{ book.get_price() }}</td>
     </tr>
     <tr>
-      <th scope="row">Seller</th>
+      <th scope="row">卖家</th>
       <td>{{ book.get_seller_id() }}</td>
     </tr>
     <tr>
-      <th scope="row">Book ID</th>
+      <th scope="row">书本 ID</th>
       <td><a href="/market/book_info?book_id={{ book.get_id() }}">{{ book.get_shortid() }}</a></td>
     </tr>
     <tr>
-      <th scope="row">Buyer</th>
+      <th scope="row">买家</th>
       <td>{{ order.get_buyer() }}</td>
     </tr>
     <tr>
-      <th scope="row">Timestamp</th>
+      <th scope="row">时间戳</th>
       <td>{{ order.get_time_sent() }}</td>
     </tr>
     <tr>
-      <th scope="row">Status</th>
+      <th scope="row">状态</th>
       <td>{{ "{:?}"|format(order.get_transaction_status()) }}</td>
     </tr>
     </tbody>
