i18n: complete; fix user metrics

--- a/sails-bin/templates/admin/metrics.html
+++ b/sails-bin/templates/admin/metrics.html
@@ -70,6 +70,14 @@
       <td>{{ user.normal }}</td>
     </tr>
     <tr>
+      <th scope="row"># of customer service workers</th>
+      <td>{{ user.customer_service }}</td>
+    </tr>
+    <tr>
+      <th scope="row"># of store keepers</th>
+      <td>{{ user.store_keeper }}</td>
+    </tr>
+    <tr>
       <th scope="row"># of admin</th>
       <td>{{ user.admin }}</td>
     </tr>
