--- a/sails-bin/templates/market/post_book_interim.html
+++ b/sails-bin/templates/market/post_book_interim.html
@@ -6,7 +6,7 @@
     <h1>您想以何种方式上架书本？</h1>
     <p class="lead">现在我们提供两种书本上架方式</p>
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6 mt-3">
 	<div class="card">
 	  <div class="card-header">
 	    自助上架
@@ -24,7 +24,7 @@
 	</div>
       </div>
 
-      <div class="col-sm-6">
+      <div class="col-sm-6 mt-3">
 	<div class="card">
 	  <div class="card-header">
 	    FLibrary Pro
