--- a/sails-bin/templates/market/all_books.html
+++ b/sails-bin/templates/market/all_books.html
@@ -5,7 +5,7 @@
 {% block content %}
 <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>欢迎来带书店</h1>
+    <h1>欢迎来到书店</h1>
     <p class="lead">在这里您可以看到用户们上架的书，您也可以自己上架书本</p>
     <a href="categories" class="btn btn-primary" role="button">按照课程进行分类</a>
     {% match ctg %}
@@ -21,7 +21,7 @@
   {% if books.len() > 0 %}
   {% include "book_list.html" %}
   {% else %}
-  <h3>No books under your request</h3>
+  <h3>没有符合条件的书本</h3>
   {% endif %}
   </div>
   <br>
