--- a/sails-bin/templates/market/explore.html
+++ b/sails-bin/templates/market/explore.html
@@ -5,7 +5,7 @@
 {% block content %}
 <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>欢迎来带书店</h1>
+    <h1>欢迎来到书店</h1>
     <p class="lead">在这里您可以看到用户们上架的书，您也可以自己上架书本</p>
     <a href="categories" class="btn btn-primary" role="button">按照课程进行分类</a>
     {% match ctg %}
@@ -30,7 +30,7 @@
             {% endmatch %}
             <div class="card-body">
               <h5 class="card-title"><a href="/market/book_info?book_id={{ book.0.get_id() }}">{{book.0.get_prodname()}}</a></h5>
-              <p class="card-text">Price: {{book.0.get_price()}}</p>
+              <p class="card-text">价格: {{book.0.get_price()}}</p>
             </div>
 	  </div>
 	</div>
@@ -41,7 +41,7 @@
     <br>
   {% else %}
     <div class="p-5 rounded shadow">
-      <h3>没有符合条件的书</h3>
+      <h3>没有符合条件的书本</h3>
     </div>
     <br>
   {% endif %}
