--- a/sails-bin/templates/messages/chat.html
+++ b/sails-bin/templates/messages/chat.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="container">
   <div class="p-5 rounded shadow">
-    <h1>Chat with {{receiver.get_id() }}</h1>
+    <h1>和 {{receiver.get_id() }} 对话</h1>
     <br>
 
   {% if messages.len() > 0 %}
@@ -22,7 +22,7 @@
     </div>
   {% endfor %}
   {% else %}
-    <h3>There was no message between you and {{ receiver.get_id() }}</h3>
+    <h3>您和 {{ receiver.get_id() }} 之间没有任何对话</h3>
   {% endif %}
 
   </div>
@@ -35,7 +35,7 @@
 	</div>
       </div>
       <br>
-      <button class="col-sm-10 btn btn-lg btn-primary" type="submit">Send</button>
+      <button class="col-sm-10 btn btn-lg btn-primary" type="submit">发送</button>
     </form>
   </div>
 </main>
